# drip

./: .gitignore  README.md
bot/: Cargo.toml  Dockerfile  Drip.json  drip-bot.db
bot/src/: main.rs
broadcast/Deploy.s.sol/8453/: run-1776026695707.json  run-1776038792030.json
broadcast/Deploy.s.sol/8453/dry-run/: run-1776024454440.json
broadcast/Deploy.s.sol/84532/: run-1776015758311.json
broadcast/DeployMockToken.s.sol/84532/: run-latest.json
broadcast/EndToEnd.s.sol/84532/: run-1776022876360.json
script/: Deploy.s.sol  DeployMockToken.s.sol  EndToEnd.s.sol
sdk/: package-lock.json  package.json
sdk/src/: index.ts
src/: Drip.sol  MockToken.sol
test/: Drip.t.sol
