[package]
name = "drip-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.12.6", features = ["full"] }
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.115"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
